# RDP-man

./: PRD.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  db.rs  health.rs  ironrdp_session.rs  lib.rs  main.rs  rdp.rs
src/components/: ConnectionForm.tsx  HistoryView.tsx  RdpViewer.tsx
