[package]
name = "rdp-man"
version = "0.1.0"
description = "RDP Man — Cross-platform RDP server monitor"
authors = ["Andriz"]
edition = "2021"

[lib]
name = "rdp_man_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
