[package]
name = "rdp-man"
version = "0.1.0"
description = "RDP Man — Cross-platform RDP server monitor"
authors = ["Andriz"]
edition = "2021"

[lib]
name = "rdp_man_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# IronRDP — pure Rust RDP
ironrdp-connector = "0.10"
ironrdp-session = "0.11"
ironrdp-blocking = "0.10"
ironrdp-pdu = "0.9"
ironrdp-core = "0.2"
ironrdp-tls = { version = "0.2", features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ironrdp-cliprdr = "0.7"
ironrdp-cliprdr-native = "0.7"
ironrdp-rdpdr = "0.7"
ironrdp-svc = "0.7"
arboard = "3" 
ironrdp-graphics = "0.9.0"

